(ui): Home Page, Theme, Navbar

--- a/src/index.css
+++ b/src/index.css
@@ -12,8 +12,8 @@
   
 
   body {
-  /* font-family: Arial, Helvetica, sans-serif; */
- font-family: "Atkinson Hyperlegible", sans-serif;
+  font-family: Arial, Helvetica, sans-serif;
+ /* font-family: "Atkinson Hyperlegible", sans-serif; */
    color: white;
 }
  
@@ -46,4 +46,14 @@
 }
 .styled-scroll::-webkit-scrollbar{
   display: none;
+}
+.gamesStyledScroll::-webkit-scrollbar{
+  height: 8px;
+  border-radius: 8px;
+   
+}
+.gamesStyledScroll::-webkit-scrollbar-thumb{
+  background: #2F2B2A;
+  border-radius: 10px;
+ 
 }
