--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Atkinson+Hyperlegible:ital,wght@0,400;0,700;1,400;1,700&display=swap');
-
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 
 @tailwind base;
 @tailwind components;
@@ -13,7 +12,6 @@
 
   body {
   font-family: Arial, Helvetica, sans-serif;
- /* font-family: "Atkinson Hyperlegible", sans-serif; */
    color: white;
 }
  
@@ -56,4 +54,10 @@
   background: #2F2B2A;
   border-radius: 10px;
  
+}
+.authIcon{
+  filter: brightness(0) invert(1);
+}
+input[type="date"]::-webkit-calendar-picker-indicator {
+  filter: invert(1); /* makes the icon white */
 }
